--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ I will get back at you ASAP</div>
     </div>
 </section>
 <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
-    <!-- <a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a> -->
+    <a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
     <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">
         <a href="https://mobirise.site/x" style="color:#aaa;"></a>
     </p>
