--- a/index.html
+++ b/index.html
@@ -471,26 +471,22 @@
 </section>
 
 <section class="footer7 cid-shTinPpqq5" once="footers" id="footer7-j">
-
-    
-
-    
-
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 Mobirise - All Rights Reserved
+                    © Copyright 2025 Shree Ratn - All Rights Reserved
                 </p>
             </div>
         </div>
     </div>
 </section>
+  
+ 
   <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex; visibility:hidden">
     <a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
     <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">
-      <a href="https://mobirise.site/r" style="color:#aaa;">
-        The page</a> was designed with Mobirise templates
+      <a href="https://mobirise.site/r" style="color:#aaa;"></a>
     </p>
   </section>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>  
