--- a/index.html
+++ b/index.html
@@ -484,9 +484,9 @@
   
  
   <section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex; visibility:hidden">
-    <a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-    <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">
-      <a href="https://mobirise.site/r" style="color:#aaa;"></a>
+    <a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem; visibility:hidden"></a>
+    <p style="flex: 0 0 auto; margin:0; padding-right:1rem; visibility:hidden">
+      <a href="https://mobirise.site/r" style="color:#aaa; visibility:hidden"></a>
     </p>
   </section>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>  
